# Vs-Fleet

./: .containerignore  .gitignore  .npmrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO.md  LAUNCH.md  LICENSE  LICENSE-APACHE  NORTH_STAR.md  PLAN.md  README.md  REQUIREMENTS.md  SECURITY.md  SUPPORT.md  WORK_GRAPH.md  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
crates/fleet-cli/: Cargo.toml
crates/fleet-cli/src/: connection.rs  init.rs  main.rs  render.rs
crates/fleet-e2e/: Cargo.toml
crates/fleet-e2e/src/: fixtures.rs  harness.rs  lib.rs
crates/fleet-e2e/tests/: dod.rs
crates/fleet-host/: .gitignore  Cargo.toml  build.rs  bundle.sh  tauri.conf.json  tauri.release.conf.json
crates/fleet-host-core/: Cargo.toml
crates/fleet-host-core/src/: confidence.rs  editors.rs  focus.rs  lib.rs  mute.rs  notify.rs  palette.rs  sort.rs  view.rs
crates/fleet-host-core/tests/: reducer_props.proptest-regressions  reducer_props.rs
crates/fleet-host/artifacts/: .gitignore  README.md
crates/fleet-host/artifacts/keepalive-reviewed/2026-06-10/: host-keepalive.json  rss.json  rss.txt  visual-analysis.json
crates/fleet-host/artifacts/keepalive-reviewed/2026-06-10-app-bundle/: host-keepalive.json  rss.json  rss.txt  visual-analysis.json
crates/fleet-host/artifacts/keepalive-reviewed/2026-06-10-probe-control/: host-keepalive.json  rss.json  rss.txt  visual-analysis.json
crates/fleet-host/artifacts/keepalive-reviewed/2026-06-10-probe-control-close/: host-keepalive.json  rss.json  rss.txt  visual-analysis.json
crates/fleet-host/artifacts/keepalive-reviewed/2026-06-10-retile-parked/: host-keepalive.json  rss.json  rss.txt  visual-analysis.json
crates/fleet-host/artifacts/titlebar/2026-06-10/: titlebar.json  visual-analysis.json
crates/fleet-host/capabilities/: default.json
crates/fleet-host/e2e/: package.json  wdio.conf.js
crates/fleet-host/e2e/test/: agent-state.e2e.js  helpers.js  open-folder.e2e.js  rename.e2e.js  select.e2e.js
crates/fleet-host/scripts/: analyze-window-shots.mjs  host-keepalive-probe.mjs  macos-window-info.m  macos-window-shot.mjs  refresh-icons.sh
crates/fleet-host/src/: bridge.rs  hub_client.rs  main.rs  mux.rs  render.rs  spawn.rs
crates/fleet-host/tests/: no_keyboard_capture.rs
crates/fleet-host/ui/: index.html  main.js  package-lock.json  package.json  styles.css  vitest.config.js
crates/fleet-host/ui/test/: harness.js  helpers.test.js  interactions.test.js  regressions.test.js
crates/fleet-hub/: Cargo.toml
crates/fleet-hub/src/: lib.rs  lockfile.rs  main.rs  merge.rs  persist.rs  reclaim.rs  server.rs  wire.rs
crates/fleet-hub/tests/: connection_frames.rs  daemon_run.rs  identity_invariants.rs  merge_property.rs  persist_restore.rs  single_instance.rs  transport_smoke.rs
crates/fleet-protocol/: Cargo.toml
crates/fleet-protocol/schema/: fleet-protocol.schema.json
crates/fleet-protocol/src/: commands.rs  events.rs  lib.rs  objects.rs  paths.rs  rollup.rs  schema.rs  state.rs  time.rs
crates/fleet-protocol/tests/: forward_compat.rs  roundtrip.rs  schema_conformance.rs
crates/fleet-reporter/: Cargo.toml
crates/fleet-reporter/proptest-regressions/: claude_tests.txt
crates/fleet-reporter/src/: backoff.rs  buffer.rs  claude.rs  claude_infer.rs  claude_infer_tests.rs  claude_shim.rs  claude_shim_tests.rs  claude_tests.rs  codex.rs  codex_tests.rs  fake.rs  identity.rs  lib.rs  liveness.rs  machine.rs  main.rs  reporter.rs  serve.rs  testkit.rs  transcript.rs  transcript_tests.rs  transition.rs  transport.rs
crates/fleet-reporter/tests/: claude_fixtures.rs  claude_infer_fixtures.rs  claude_shim_fixtures.rs  codex_fixtures.rs  identity_reclaim.rs  repcore_hub.rs  transcript_fixtures.rs
crates/fleet-reporter/tests/fixtures/claude/: camelcase_user_prompt_submit.json  malformed.json  missing_session_id.json  notification_unknown.json  post_tool_use.json  pre_tool_use.json  session_end.json  session_start.json  stop_done.json  stop_hook_active.json  stop_idle.json  subagent_stop.json  user_prompt_submit.json
crates/fleet-reporter/tests/fixtures/claude_shim/: permission_request.json  permission_response_allow.json  permission_response_structured.json  stop_idle.json  user_prompt_submit.json
crates/fleet-reporter/tests/fixtures/codex/: camelcase_pre_tool_use.json  malformed.json  missing_session_id.json  permission_request.json  permission_response_allow.json  permission_response_deny.json  post_tool_use.json  pre_tool_use.json  session_end.json  session_start.json  stop_done.json  stop_idle.json  unknown_hook.json  user_prompt_submit.json
crates/fleet-reporter/tests/fixtures/transcript/: drifted.jsonl  pending_approval.jsonl  resolved.jsonl
docs/: ARCHITECTURE.md  ENGINEERING_SPEC.md  LOCAL_DATA_AND_UNINSTALL.md  QUICKSTART.md  RELEASING.md  test-matrix.md
research/: README.md
scripts/: apply-license-decision.sh  apply-namespace-decision.sh  check-ai-contribution-decision.sh  check-alpha-scope-decision.sh  check-branding-decision.sh  check-ci-evidence-decision.sh  check-community-intake-decision.sh  check-contribution-decision.sh  check-dco-signoff.sh  check-dependabot-config.sh  check-dependency-review-decision.sh  check-distribution-decision.sh  check-doc-links.sh  check-editor-server-boundary-decision.sh  check-frontend-contract.sh  check-github-intake-templates.sh  check-github-publication-evidence.sh  check-github-workflows.sh  check-license-decision.sh  check-license-intent.sh  check-local-data-decision.sh  check-lockfile-policy.sh  check-name-collision-decision.sh  check-namespace-decision.sh  check-owner-decisions.sh  check-owner-release-approval.sh  check-owner-reply-template.sh  check-platform-support-decision.sh  check-privacy-decision.sh  check-public-alpha-readiness-assessment.sh  check-public-branch-evidence.sh  check-public-release-branch.sh  check-public-tree-size.sh  check-release-custody-decision.sh  check-release-notes.sh  check-roadmap-decision.sh  check-security-reporting-decision.sh  check-support-decision.sh  (+68 more)
(+109 files in other folders)
