[workspace]
resolver = "2"
members = [
    "crates/fleet-protocol",
    "crates/fleet-hub",
    "crates/fleet-reporter",
    "crates/fleet-cli",
    "crates/fleet-host-core",
    "crates/fleet-e2e",
]
# fleet-host is the Tauri GUI app. It is a STANDALONE crate (its own workspace),
# deliberately excluded from this workspace so `cargo build --workspace` in CI
# (which also runs on Linux) never builds the native webview stack — Tauri on
# Linux needs webkit2gtk/pkg-config the portable test matrix does not install.
# The host app is a macOS GUI, built and run separately on macOS.
exclude = ["crates/fleet-host"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Fleet Team"]
license = "MIT"

[workspace.dependencies]
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# async runtime
tokio = { version = "1", features = ["full"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# error handling
anyhow = "1"
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
