[package]
name = "fleet-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Fleet CLI — `fleet ls` and other user-facing commands"
publish = false

[[bin]]
name = "fleet"
path = "src/main.rs"

[dependencies]
fleet-protocol = { path = "../fleet-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = "0.29"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "1.1"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"

[lints.rust]
# `coverage_nightly` is set by cargo-llvm-cov's nightly coverage gate; register
# it so the `#[cfg_attr(coverage_nightly, ...)]` exclusions don't warn on stable.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
