[package]
name = "fleet-host-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Fleet host core — pure-Rust inbox view-model (snapshot+delta → InboxView) for the Tauri host face"
publish = false

[lints.rust]
# `coverage_nightly` is set by cargo-llvm-cov's nightly coverage gate; register
# it so the `#[cfg_attr(coverage_nightly, ...)]` exclusions don't warn on stable.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[lib]
name = "fleet_host_core"

# A pure-Rust view-model: NO I/O, NO async, NO window/GUI glue. It consumes
# protocol snapshots+deltas and projects them into an `InboxView`. The thin
# Tauri shell wraps this crate but lives elsewhere.
[dependencies]
fleet-protocol = { path = "../fleet-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = "1"
serde_json = { workspace = true }
