# Standalone crate (own workspace) — see root Cargo.toml `exclude`. This is the
# Tauri GUI host face; it path-depends into the main workspace's library crates.
[workspace]

[package]
name = "fleet-host"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Fleet host face — the Tauri sidebar window (the primary v1 GUI)"
license = "MIT"
publish = false

[[bin]]
name = "fleet-host"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
fleet-protocol = { path = "../fleet-protocol" }
fleet-host-core = { path = "../fleet-host-core" }
fleet-hub = { path = "../fleet-hub" }
# `unstable` enables the multi-webview API (a window hosting both Fleet's rail UI
# and the embedded code-server editor surface) — the core of the multiplexer.
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-notification = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "signal"] }
tokio-tungstenite = "0.29"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
