[package]
name = "fleet-hub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Fleet Hub — central broker process (WebSocket + unix-socket, single-instance)"
publish = false

[lib]
name = "fleet_hub"

[[bin]]
name = "fleet-hub"
path = "src/main.rs"

[dependencies]
fleet-protocol = { path = "../fleet-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.23"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
# Persistence (PLAN D3, S7): append-only SQLite event log + projection. The
# `bundled` feature compiles SQLite in-tree so there is no system libsqlite
# dependency (reproducible on the Nix local gate and CI alike).
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tokio = { workspace = true }
tokio-tungstenite = "0.23"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
proptest = "1"
tempfile = "3"
