[package]
name = "fleet-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Fleet wire protocol types — JSON-serializable, schema-versioned, transport-agnostic"
publish = false

[lints.rust]
# `coverage_nightly` is set by cargo-llvm-cov's nightly coverage gate; register
# it so the `#[cfg_attr(coverage_nightly, ...)]` exclusions don't warn on stable.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[lib]
name = "fleet_protocol"

[features]
# `schema` pulls in schemars so the JSON Schema artifact can be generated and a
# conformance test can validate it. Kept behind a feature so the wire types stay
# dependency-light for downstream crates that only need serde.
default = ["schema"]
schema = ["dep:schemars"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
jiff = { workspace = true }
schemars = { version = "1.2", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = "1"
schemars = "1.2"
jsonschema = "0.46"
